[tool.poetry]
name = "ml_workspace"
version = "0.1.0"
description = "A workspace for machine/deep learning."
authors = ["Stefan Vukicevic <stefanvuk17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
pandas = "^1.4.2"
matplotlib = "^3.5.3"
datasette-seaborn = "^0.2a0"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
ipython = "^8.4.0"
jupyterlab = "^3.4.5"
requests = "^2.28.1"
praw = "^7.6.0"
yfinance = "^0.1.74"

[tool.poetry.dependencies]
torch = { version = "=1.13.0+cu116", source = "pytorch" }


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"
secondary = true

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
