[tool.poetry]
name = "ml_workspace"
version = "0.1.0"
description = "A workspace for machine/deep learning."
authors = ["Stefan Vukicevic <stefanvuk17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
pandas = "^1.4.2"
matplotlib = "^3.5.3"
datasette-seaborn = "^0.2a0"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
ipython = "^8.4.0"
jupyterlab = "^3.4.5"
requests = "^2.28.1"
praw = "^7.6.0"
yfinance = "^0.1.74"
torch = [
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp37-cp37m-linux_x86_64.whl", python=">=3.7,<3.8", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp37-cp37m-win_amd64.whl", python=">=3.7,<3.8", markers="sys_platform == 'win32'"},
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl", python=">=3.8,<3.9", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-win_amd64.whl", python=">=3.8,<3.9", markers="sys_platform == 'win32'"},
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl", python=">=3.9,<3.10", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-win_amd64.whl", python=">=3.9,<3.10", markers="sys_platform == 'win32'"},
]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
